streamexpr-core/src/main/scala/com/qiuyj/streamexpr/parser/StreamExpressionGrammar.txt
StreamExpression: StreamOp ( BAR StreamOp )*

StreamOp: OpName LPARAN Parameter ( COMMA Parameter )* RPARAN

OpName: Identifier

Identifier: IdentifierStart ( IdentifierPart )*

IdentifierPart: IdentifierStart | DIGIT

IdentifierStart: UNDERLINE | DOLLAR | LETTER_UPPER | LETTER_LOWER

Parameter: Expr

Expr: OrExpr

OrExpr: AndExpr ( Or AndExpr )*

Or: BARBAR | OR

AndExpr: RelationExpr ( And RelationExpr )*

And: AMPAMP | AND

RelationExpr: AddSubExpr RelOp AddSubExpr

RelOp: EQEQ | NEQ | GT | GTEQ | LT | LTEQ | "EQ" | "eq" | "NEQ" | "neq" | "GTEQ" | "gteq" | "GT" | "gt" | "LT" | "lt" | "LTEQ" | "lteq"

AddSubExpr: MultiDivExpr ( PLUS | MINUS ) MultiDivExpr

MultiDivExpr: PrimaryExpr ( MULTI | DIV | MOD ) PrimaryExpr

PrimaryExpr: ParanExpr
    | PrefixExpr
    | PostfixExpr
    | Identifier
    | Numeric
    | ArrayExpr
    | NestedPropertyAccessor
    | FunctionCall

ParanExpr: LPARAN Expr RPARAN

ArrayExpr: LBRACKET RBRACKET
    | LBRACKET Expr ( COMMA Expr )* RBRACKET

PrefixExpr: ( PLUS | MINUS | INC | DEC | BANG ) Expr

NestedPropertyAccessor: Identifier ( BAR Identifier )+

FunctionCall: Identifier ( DOT Identifier )+ ( LPARAN RPARAN | LPARAN Expr ( COMMA Expr )* RPARAN )

DOT: "."
INC: "++"
DEC: "--"
BANG: "!"
LBRACKET: "["
RBRACKET: "]"
MULTI: "*"
DIV: "/"
MOD: "%"
PLUS: "+"
MINUS: "-"
EQEQ: "=="
NEQ: "!="
GT: ">"
GTEQ: ">="
LT: "<"
LTEQ: "<="
UNDERLINE: "_"
LPARAN: "("
RPARAN: ")"
COMMA: ","
BAR: "|"
BARBAR: "||"
OR: "or" | "OR"
AMPAMP: "&&"
AND: "and" | "AND"
DOLLAR: "$"
DIGIT: "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
LETTER_UPPER: "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
LETTER_LOWER: "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
